account controller y login

--- a/Views/Home/allPages.cshtml
+++ b/Views/Home/allPages.cshtml
@@ -1,16 +1,16 @@
-<a href='@Url.Action("Login", "Home")'> Login </a>
+<a href='@Url.Action("Login", "Account")'> Login </a>
 <br>
 <a href='@Url.Action("Configuracion", "Home")'> Configuracion </a>
 <br>
 <a href='@Url.Action("CancionesPopulares", "Home")'> Canciones Populares </a>
 <br>
-<a href='@Url.Action("CrearCuenta", "Home")'> Crear cuenta </a>
+<a href='@Url.Action("CrearCuenta", "Account")'> Crear cuenta </a>
 <br>
-<a href='@Url.Action("CrearUsuario", "Home")'> Crear Usuario </a>
+<a href='@Url.Action("CrearUsuario", "Account")'> Crear Usuario </a>
 <br>
 <a href='@Url.Action("Cursos", "Home")'> Cursos </a>
 <br>
-<a href='@Url.Action("ElegirUsuario", "Home")'> Elegir Usuario </a>
+<a href='@Url.Action("ElegirUsuario", "Account")'> Elegir Usuario </a>
 <br>
 <a href='@Url.Action("LogrosYRecompensas", "Home")'> Logros y recompensas </a>
 <br>
