--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -26,6 +26,32 @@
         @RenderBody()
     </main>
 
+    <footer>
+        <section class="footer">
+            <div class="footerIzq">
+                <div>
+                    <img src="" alt="imagenMelodika">
+                    <h3>Melodika</h3>
+                    
+                </div>
+                <p>La musica esta en vos, nosotros te la desbloqueamos</p>
+            </div>
+            <div>
+                <div class="footerDer">
+                    <p>Politica de privacidad</p>
+                    <p>Términos y condiciones</p>
+                    <p>Ayuda</p>
+                </div>
+                <div class="redes">
+                    <img src="imagenes/Facebook.png" alt="Facebook">
+                    <img src="imagenes/Instagram.png" alt="Instagram">
+                    <img src="imagenes/Discord.png" alt="Discord">
+                    <img src="imagenes/Spotify.png" alt="Spotify">
+                </div>
+            </div>
+        </section>
+    </footer>
+
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
