--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -31,10 +31,10 @@
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="#">Configuración</a></li>
                 <li class="dropdown-submenu">
-                  <a class="dropdown-item dropdown-toggle" href="#">Submenú</a>
+                  <a class="dropdown-item dropdown-toggle" href="#">Seguimiento de Usuario</a>
                   <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">Subopción 1</a></li>
-                    <li><a class="dropdown-item" href="#">Subopción 2</a></li>
+                    <li><a class="dropdown-item" href="#"> Logros y recompensas</a></li>
+                    <li><a class="dropdown-item" href="#">Progreso</a></li>
                   </ul>
                 </li>
               </ul>
