--- a/Views/Home/allPages.cshtml
+++ b/Views/Home/allPages.cshtml
@@ -15,3 +15,5 @@
 <a href='@Url.Action("LogrosYRecompensas", "Home")'> Logros y recompensas </a>
 <br>
 <a href='@Url.Action("PreguntasFrecuentes", "Home")'> Preguntas frecuentes </a>
+<br>
+<a href='@Url.Action("Contactos", "Home")'> Contactos </a>
