--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                 Perfil
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Configuración</a></li>
+                <li><a class="dropdown-item" href='@Url.Action("Configuracion", "Home")'>Configuración</a></li>
                 <li class="dropdown-submenu">
                   <a class="dropdown-item dropdown-toggle" href="#">Seguimiento de Usuario</a>
                   <ul class="dropdown-menu">
@@ -42,7 +42,7 @@
 
             <!-- CURSOS -->
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Cursos</a>
+              <a class="nav-link active" aria-current="page" href='@Url.Action("Cursos", "Home")'>Cursos</a>
             </li>
 
             <!-- PRACTICA -->
@@ -69,7 +69,7 @@
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="#">Preguntas frecuentes</a></li>
                 <li><a class="dropdown-item" href="#">Reportar errores</a></li>
-                <li><a class="dropdown-item" href="#">Contacto</a></li>
+                <li><a class="dropdown-item" href='@Url.Action("Contactos", "Home")'>Contacto</a></li>
               </ul>
             </li>
 
