--- a/Views/Home/Contactos.cshtml
+++ b/Views/Home/Contactos.cshtml
@@ -5,6 +5,9 @@
 
 <section class="contacto-page">
     <div class="contacto-burbujas" aria-hidden="true">
+    <span></span>
+    <span></span>
+    <span></span>
     </div>
 
     <div class="contacto-contenido">
