--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -9,11 +9,7 @@
       <div class="col-md-6">
         <h1 class="lead">Descubrí tus habilidades musicales</h1>
         <p class="display-5 fw-bold mb-3">Aprendé música de forma interactiva con Melódika</p>
-<<<<<<< HEAD
-        <a  href='@Url.Action("Login", "Home")' class="btn btn-primary btn-lg mt-3">COMENZAR AHORA</a>
-=======
-        <a href='@Url.Action("Login", "Home")' class="btn btn-primary btn-lg mt-3">COMENZAR AHORA</a>
->>>>>>> 2ef62bf66e301096f469c724bd08d4f6a256f9fa
+        <a  href='@Url.Action("Login", "Account")' class="btn btn-primary btn-lg mt-3">COMENZAR AHORA</a>
       </div>
 
       <div class="col-md-6 text-center">
