--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -47,7 +47,7 @@
 
             <!-- PRACTICA -->
             <li class="nav-item">
-              <a class="nav-link" href="#">Práctica</a>
+              <a class="nav-link" href='@Url.Action("CancionesPopulares", "Home")'>Canciones populares</a>
             </li>
 
             <!-- COMUNIDAD -->
@@ -71,6 +71,10 @@
                 <li><a class="dropdown-item" href="#">Reportar errores</a></li>
                 <li><a class="dropdown-item" href='@Url.Action("Contactos", "Home")'>Contacto</a></li>
               </ul>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link" href='@Url.Action("todasLasPaginas", "Home")'>All Pages</a>
             </li>
 
           </ul>
