--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -19,10 +19,9 @@ body {
   width: 1px;
   height: 1px;
   padding: 0;
-  margin: -1px;
+  margin: 1px;
   overflow: hidden;
-  clip: rect(0, 0, 0, 0); /* Oculta visualmente el elemento manteniéndolo accesible para lectores de pantalla */
-  clip-path: inset(50%); /* Alternativa moderna para recortar el contenido y ocultarlo visualmente */
+  clip-path: inset(50%); /* Oculta visualmente el elemento manteniéndolo accesible para lectores de pantalla */
   white-space: nowrap;
   border: 0;
 }
