--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -47,7 +47,7 @@
 
             <!-- PRACTICA -->
             <li class="nav-item">
-              <a class="nav-link" href="#">Práctica</a>
+              <a class="nav-link" href='@Url.Action("CancionesPopulares", "Home")'>Práctica</a>
             </li>
 
             <!-- COMUNIDAD -->
