--- a/Views/Account/ElegirUsuario.cshtml
+++ b/Views/Account/ElegirUsuario.cshtml
@@ -37,7 +37,7 @@
     </section>
 
     <div>
-      <a href='@Url.Action("Index", "Home")' class = "accion-primaria"> Cerrar sesion </a>
+      <a href='@Url.Action("LogOut", "Account")' class = "accion-primaria"> Cerrar sesion </a>
     </div>
 
   </main>
