--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -5,16 +5,23 @@
 <section class="login-page">
     <article class="login-caja">
         <h1>Inicio de sesion en melodika</h1>
-        <form class="login-formulario" method="post">
+        
+        <form class="login-formulario" method="post" action='@Url.Action("LoginGuardar", "Account")'>
+            
             <div class="login-campo">
                 <label class="visually-hidden" for="login-email">Correo electrónico o teléfono</label>
-                <input class="login-entrada" type="text" id="login-email" name="email" placeholder="Correo electronico o telefono"/>
+                
+                <input class="login-entrada" type="text" id="login-email" name="correo" placeholder="Correo electronico o telefono"/>
             </div>
+            
             <div class="login-campo">
                 <label class="visually-hidden" for="login-password">Contraseña</label>
-                <input class="login-entrada" type="password" id="login-password" name="password" placeholder="Contraseña"/>
+                
+                <input class="login-entrada" type="password" id="login-password" name="contraseña" placeholder="Contraseña"/>
             </div>
-            <a href='@Url.Action("ElegirUsuario", "Account")' class= "login-boton"> Iniciar sesion </a>
+            
+            <button type="submit" class="login-boton"> Iniciar sesion </button>
+            
         </form>
 
         <p>
