--- a/Views/Home/CancionesPopulares.cshtml
+++ b/Views/Home/CancionesPopulares.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Canciones";
 }
 
-<section class="songs-page-compact">
+<section class="Canciones-populares">
     <div>
         <h1>Canciones</h1>
         <p>No encontrás tu canción? busca la tuya!</p>
@@ -16,26 +16,27 @@
 
     <section>
         <h2>Canciones populares:</h2>
-        <div>
+        <div class="canciones-grid">
             @foreach (Cancion cancion in ViewBag.canciones)
             {
-            <div>
+            <div class="song-card">
                 <img src="" alt="Foto Cancion" />
-                <div>
+                <div class="song-info">
                     <h3>@cancion.Titulo - @cancion.Autor</h3>
-                    <div>
+                    <div class="song-meta">
                         <span>@cancion.Dificultad</span>
-                        @switch(cancion.Valoracion){
-                            case 0:<span>⭐</span>
-                            break;
-                            case 1:<span>⭐⭐</span>
-                            break;
-                            case 2:<span>⭐⭐⭐</span>
-                            break;
-                            default: <span>Sin valoracion</span>
-                            break;
-                        }
-                        
+                        <div class="canciones-estrellas">
+                            @switch(cancion.Valoracion){
+                                case 0:<span>⭐☆☆</span>
+                                break;
+                                case 1:<span>⭐⭐☆</span>
+                                break;
+                                case 2:<span>⭐⭐⭐</span>
+                                break;
+                                default: <span>☆☆☆</span>
+                                break;
+                            }
+                        </div>
                     </div>
                 </div>
             </div>
