--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -27,7 +27,7 @@
   </section>
 
   <section class="container">
-    <h2 class="section-title">QUÉ VAS A APRENDER</h2>
+    <h2 class="section-title">¿Qué vas a aprender?</h2>
     <div class="row">
       <div class="col-md-4 icon-box">
         <i class="bi bi-person-check-fill"></i>
