--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -94,7 +94,7 @@
         <section class="footer">
             <div class="footerIzq">
                 <div>
-                    <img src="" alt="imagenMelodika">
+                    <img src="/imagenes/M negra PNG.png" alt="imagenMelodika">
                     <h3>Melodika</h3>
                     
                 </div>
@@ -107,10 +107,10 @@
                     <p>Ayuda</p>
                 </div>
                 <div class="redes">
-                    <img src="imagenes/Facebook.png" alt="Facebook">
-                    <img src="imagenes/Instagram.png" alt="Instagram">
-                    <img src="imagenes/Discord.png" alt="Discord">
-                    <img src="imagenes/Spotify.png" alt="Spotify">
+                    <img src="/imagenesF/faceboock.png" alt="Facebook">
+                    <img src="/imagenesF/insta.png" alt="Instagram">
+                    <img src="/imagenesF/ds.png" alt="Discord">
+                    <img src="/imagenesF/sp.png" alt="Spotify">
                 </div>
             </div>
         </section>
