--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -8,8 +8,8 @@
     <div class="row align-items-center">
       <div class="col-md-6">
         <h1 class="lead">Descubrí tus habilidades musicales</h1>
-        <p class="display-5 fw-bold mb-3">Aprendé música de forma interactiva con Melódika</p>
-        <a  href='@Url.Action("Login", "Account")' class="btn btn-primary btn-lg mt-3">COMENZAR AHORA</a>
+        <p class="display-5 fw-bold mb-3">Aprendé música de forma interactiva con Melódika</p> 
+        <a  href='@Url.Action("Login", "Account")' class="btn btn-primary btn-lg mt-3" id="botonComenzarAhora" onClick="verificarSesion()"  >COMENZAR AHORA</a>
       </div>
 
       <div class="col-md-6 text-center">
