--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -2,13 +2,14 @@
 <html lang="es">
 
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - NombreProyecto</title>
-      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/css/fonts.css" asp-append-version="true" />
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>@ViewData["Title"] - NombreProyecto</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+  <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+  <link rel="stylesheet" href="~/css/fonts.css" asp-append-version="true" />
 </head>
 
 <body>
@@ -16,17 +17,20 @@
   <header>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href='@Url.Action("Index", "Home")'><img src="/imagenes/M negra PNG.png" alt="Logo" style="height:35px;"></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <a class="navbar-brand" href='@Url.Action("Index", "Home")'><img src="/imagenes/M negra PNG.png" alt="Logo"
+            style="height:35px;"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+          aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
 
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav">
 
-            
+
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
                 Perfil
               </a>
               <ul class="dropdown-menu">
@@ -34,7 +38,8 @@
                 <li class="dropdown-submenu">
                   <a class="dropdown-item dropdown-toggle" href="#">Seguimiento de Usuario</a>
                   <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href='@Url.Action("LogrosYRecompensas", "Home")'> Logros y recompensas</a></li>
+                    <li><a class="dropdown-item" href='@Url.Action("LogrosYRecompensas", "Home")'> Logros y
+                        recompensas</a></li>
                     <li><a class="dropdown-item" href="#">Progreso</a></li>
                   </ul>
                 </li>
@@ -53,7 +58,8 @@
 
             <!-- COMUNIDAD -->
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
                 Comunidad
               </a>
               <ul class="dropdown-menu">
@@ -64,11 +70,13 @@
 
             <!-- SOPORTE -->
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
                 Soporte
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href='@Url.Action("PreguntasFrecuentes", "Home")'>Preguntas frecuentes</a></li>
+                <li><a class="dropdown-item" href='@Url.Action("PreguntasFrecuentes", "Home")'>Preguntas frecuentes</a>
+                </li>
                 <li><a class="dropdown-item" href="#">Reportar errores</a></li>
                 <li><a class="dropdown-item" href='@Url.Action("Contactos", "Home")'>Contacto</a></li>
               </ul>
@@ -87,41 +95,49 @@
 
   </header>
 
-    <main role="main">
-        @RenderBody()
-    </main>
+  <main role="main">
+    @RenderBody()
+  </main>
 
-    <footer>
+  <footer>
+    <div class="card">
+      <img src="/imagenesF/footer.png" class="card-img" alt="footer">
+      <div class="card-img-overlay d-flex justify-content-center align-items-center">
         <section class="footer">
-            <div class="footerIzq">
-                <div>
-                    <img src="/imagenes/M negra PNG.png" alt="imagenMelodika">
-                    <h3>Melodika</h3>
-                    
-                </div>
-                <p>La musica esta en vos, nosotros te la desbloqueamos</p>
-            </div>
+          <div class="footerIzq">
             <div>
-                <div class="footerDer">
-                    <p>Politica de privacidad</p>
-                    <p>Términos y condiciones</p>
-                    <p>Ayuda</p>
-                </div>
-                <div class="redes">
-                    <img src="/imagenesF/faceboock.png" alt="Facebook">
-                    <img src="/imagenesF/insta.png" alt="Instagram">
-                    <img src="/imagenesF/ds.png" alt="Discord">
-                    <img src="/imagenesF/sp.png" alt="Spotify">
-                </div>
+              <img src="/imagenesF/Logo PNG.png" alt="imagenMelodika">
+              <!--<h3>Melodika</h3>-->
             </div>
+            <p>La musica esta en vos, nosotros te la desbloqueamos</p>
+          </div>
+          <div class="footerDer">
+            <div class="footerDer">
+              <p>Politica de privacidad</p>
+              <p>Términos y condiciones</p>
+              <p>Ayuda</p>
+            </div>
+            <div class="redes">
+              <img src="/imagenesF/facebook-svgrepo-com.svg" alt="Facebook">
+              <img src="/imagenesF/instagram-1-svgrepo-com.svg" alt="Instagram">
+              <img src="/imagenesF/discord-v2-svgrepo-com.svg" alt="Discord">
+              <img src="/imagenesF/spotify-color-svgrepo-com.svg" alt="Spotify">
+            </div>
+          </div>
+          <p >© 2025 Melodika. Todos los derechos reservados.</p>
         </section>
-    </footer>
+      </div>
+    </div>
 
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
-    @await RenderSectionAsync("Scripts", required: false)
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  </footer>
+
+  <script src="~/lib/jquery/dist/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+    crossorigin="anonymous"></script>
+  <script src="~/js/site.js" asp-append-version="true"></script>
+  @await RenderSectionAsync("Scripts", required: false)
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 
