--- a/Views/Home/Cursos.cshtml
+++ b/Views/Home/Cursos.cshtml
@@ -4,7 +4,9 @@
     ViewData["Title"] = "Cursos";
 }
 
-<section>
+
+<h1 class = "CursosTitulo">Cursos<h1>
+<section class = "SeccionCursos">
     @foreach (Curso curso in ViewBag.cursos)
     {
         <div>
