--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -998,3 +998,10 @@ body {
 .bg-body-tertiary{
   background-color: #fff !important;
 }
+
+/*Cursos*/
+.CursosTitulo
+{
+display: flex;
+justify-content: center;
+}
