--- a/Views/Account/CrearCuenta.cshtml
+++ b/Views/Account/CrearCuenta.cshtml
@@ -3,29 +3,29 @@
 }
 
 
-<section class="create-account-page">
-    <article class="crear-caja">
+<section class="pagina-crear-cuenta">
+    <article>
         <h1>Crear cuenta</h1>
 
-        <form class="crear-formulario" method="post">
-            <div class="crear-campo">
+        <form method="post">
+            <div>
                 
-                <input class="crear-entrada" type="email" id="register-email" name="email" placeholder="Correo electronico" autocomplete="email" required />
+                <input type="email" id="register-email" name="email" placeholder="Correo electronico" autocomplete="email" required />
             </div>
 
-            <div class="crear-campo">
+            <div>
          
-                <input class="crear-entrada" type="password" id="register-password" name="password" placeholder="Contraseña" autocomplete="new-password" required />
+                <input type="password" id="register-password" name="password" placeholder="Contraseña" autocomplete="new-password" required />
             </div>
 
-            <div class="crear-campo">
+            <div>
         
-                <input class="crear-entrada" type="password" id="register-confirm" name="confirmPassword" placeholder="Confirmar contraseña" autocomplete="new-password" required />
+                <input type="password" id="register-confirm" name="confirmPassword" placeholder="Confirmar contraseña" autocomplete="new-password" required />
             </div>
 
-            <div class="crear-campo">
+            <div>
                 
-                <input class="crear-entrada" type="text" id="register-username" name="username" placeholder="Username" autocomplete="username" required />
+                <input type="text" id="register-username" name="username" placeholder="Username" autocomplete="username" required />
             </div>
 
             <label class="crear-opcion" for="terms">
